<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MedicineReminderQRCode</string>
    <string name="action_settings">Log Out</string>
    <string name="user">User</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="import_qrcode">Import QRCode</string>
    <string name="scan_qrcode">Scan QRCode</string>
    <string name="create_reminder" tools:ignore="DuplicateDefinition">Create Reminder</string>
    <string name="user1" tools:ignore="Typos">user1</string>
    <string name="user2">user2</string>
    <string name="select_user">Select User</string>
    <string name="default_time">00:00</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="name">Name:</string>
    <string name="portion">Portion:</string>
    <string name="time">Time:</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="generate_qrcode">Generate Qrcode</string>
    <string name="empty">Empty</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="qr_code">QR-Code</string>
    <string name="save">save</string>

</resources>