<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    android:theme="@style/Theme.MedicineReminderQRCode.NoActionBar"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MedicineReminderQRCode.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:layout_anchor="@+id/appBarLayout"
            app:layout_anchorGravity="center"
            app:popupTheme="@style/Theme.MedicineReminderQRCode.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/import_qr_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/design_default_color_secondary"
        android:contentDescription="@string/app_name"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_fab"
        app:layout_constraintStart_toStartOf="@+id/add_fab"
        app:srcCompat="@drawable/ic_baseline_add_to_photos_24" />

    <TextView
        android:id="@+id/import_qr_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/import_qrcode"
        app:layout_constraintBottom_toBottomOf="@+id/import_qr_fab"
        app:layout_constraintEnd_toStartOf="@+id/import_qr_fab"
        app:layout_constraintTop_toTopOf="@+id/import_qr_fab" />

    <!--Action name text for the add person button-->
    <!--Make sure that you are constraining this Text
        to the add Person FAB button-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scan_qr_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/app_name"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/import_qr_fab"
        app:layout_constraintEnd_toEndOf="@+id/import_qr_fab"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/import_qr_fab"
        app:srcCompat="@drawable/ic_qr_code" />

    <TextView
        android:id="@+id/scan_qr_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/scan_qrcode"
        app:layout_constraintBottom_toBottomOf="@+id/scan_qr_fab"
        app:layout_constraintEnd_toStartOf="@+id/scan_qr_fab"
        app:layout_constraintTop_toTopOf="@+id/scan_qr_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_reminder_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@+id/add_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_fab"
        app:layout_constraintTop_toTopOf="@+id/add_fab"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_create_24" />

    <TextView
        android:id="@+id/create_reminder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/create_reminder"
        app:layout_constraintBottom_toBottomOf="@+id/create_reminder_fab"
        app:layout_constraintEnd_toStartOf="@+id/create_reminder_fab"
        app:layout_constraintTop_toTopOf="@+id/create_reminder_fab" />

    <TextView
        android:id="@+id/emptyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="32sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>